@@ -1,32 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX config.gentoo 883 RMD160 7e6abf65cc60bbd409d4b10004eeb66dc91fa019 SHA1 0c1c2394d75f2a6beb3c7c540df96d4720232510 SHA256 6d5b8f14b5ede4e04835730fe9ffc6246774c7cb10891cbb6337f567eff4f079
+AUX config.gentoo 547 RMD160 db872641e2a0f3352554c15a7f561894fdb2aa37 SHA1 add31e3f3888906ad6ce8178735cad0d08a0e510 SHA256 51b798a297e16fe7cc281471671c64e123a1588108fbbf87a974b73b0b50c0dd
+AUX config.gentoo-so-r1 601 RMD160 3ee8f50dd9466449057df6022994bff76b6a99db SHA1 b9e045681ffad767c2483d5ede7dd7109b54b231 SHA256 eb33f62e18b8e847d5730bd31f2b22e99339d46cfa32750233df959743aec313
 AUX live-2009.06.02-as-needed.patch 2046 RMD160 0b3d76de9a4e3204270f9a6d302f30dfaa35e231 SHA1 c123bf94e44e1956586038e98b54b66fad42e129 SHA256 91a6686066fb66d191ae715b30e21b1df26546cd07aa3a4ce3280521a90739da
 AUX live-2009.06.02-buildorder.patch 924 RMD160 a9a6a7a364b21b43859e35e6e023715bb0fad7dd SHA1 f86fa92a48572bb89b4a6a38c6aed4edd4d098de SHA256 59a91ecbbcdda7f62f7150962490333bbb67e2ee838ff9c6e334dd5d0ab20813
 AUX live-2009.06.02-libdeps.patch 2803 RMD160 37d3e1479e742e73d9694678f0c2628ece430725 SHA1 1c8f0ae1092bf57d322361c168e70d60bafd0442 SHA256 ba29f92495d18c0620fbda9d3797cf5871fb22443a242f982a854b892a309903
 AUX live-2009.09.28-buildorder.patch 1060 RMD160 cd6a6c2e699eaae0c5b5a40959c988ed3e74745a SHA1 5fdeea464948f31dcb4a6948394f74b67e502428 SHA256 f280a8cade00530cdd009cf1f999df6ff0d5f6c53cae78e12e84a8dc6461b2aa
 AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA1 87526904f6e69696f6fbf41a2313f1a43c51871a SHA256 6347a54046cf02671666bf74a3dbb54ebb898adafe9670abecebe86e6d870288
-DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
 DIST live.2011.01.24.tar.gz 480478 RMD160 2c029b276fc382f0e483fe769a021b2b280e8ed6 SHA1 94545798f1b700d6e30c4b132d7bcff4d5d14db8 SHA256 7c98cf1db4ba1015645f6e4f5f51442b0d54eb76a8f477737aded58a5dc2bd42
-EBUILD live-2009.06.02.ebuild 2549 RMD160 76d8f7c15a7a30d461d4454aaaaadc8dae45c348 SHA1 45399140d16fe98f857081b8842872165b793571 SHA256 4112e1f6bac3f02b62007fb5ff501bd1d0d3b1c337c8051a0b55fb714927309c
-EBUILD live-2011.01.24.ebuild 3736 RMD160 da17394e4e51a041e5bfe28e7e1e20e196b1470e SHA1 3bc0856690a88e508218514f2f5a18615211df73 SHA256 ef52b717ee4bf9ba8140998aedf9d658fa07811a14a2f8b62924a0aaffae25ea
-MISC ChangeLog 17436 RMD160 14afadd38cc08d83c36d4608f92836c59d36301d SHA1 25533fe308c0b627eaf424d22a08ea2ab07ea91f SHA256 d9f979c9ea3d0f0a4271610c10e91c86f9642119fc7b0ce9c1dcfb424140cd8c
+EBUILD live-2011.01.24.ebuild 3738 RMD160 778f8a2465714ec12d1e9380cf5565dd4a07bf67 SHA1 42f0e81ae7ec996af36ca6f67538333dee3ec5b6 SHA256 dce3783ecdb2c97880925322226ccf14105bd21556d3832303fa7df0f704bf8c
+MISC ChangeLog 17833 RMD160 6130c7b98444e909810e886c15c05bf7683b6459 SHA1 312aa1aeeb27aefcb7109bea9c35f0371a24d684 SHA256 3e54ea63d2ea9571e36f92b634f0e899bd284e0ce1f75f8fd9e910cbae86342e
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNZIUyAAoJEHQ6UuhrqBBQGdUQAKmG5gJZbSUR6af43ZIIkkhv
-ziA4BRh7vNgD7usVndyGXBXvW/1R2wB0RsaXV4+tUt12vLCrWXjK1Qhkz8myozaM
-5F+IaagAdTnrPvB4ic4UnoYJzycPZZlaNsFolwsGylwCYg+LK7simNbeEvmHRWmB
-6luK+jZfzTCG3F+d8fDHv/IsxtAmeLTfTnhDOOaOBTka64uCYBk/Stm4tyuOkeqT
-Xcy9Yw3+4vUwzfgBMoBvruiKmdw4O5lxtPzDTtQHzusX3k7yjvNDpO9RB2qBSpC2
-+QCW329tBsvRREuynk/t6BYlrKfHC5gOmLuRfjOkygzAXaz0CSdpQIbnMx+QImlS
-M13vU3M5aueSyYAhIYc/hvH/BI1NjJPecuqoPRbNNssOa4Zsnoluz6zImoBoP6om
-gsbBF9TAvc+T6lpbK9A62bCRwgs3aGHGWU5DayfMg9CYaGIaTdV5y2T7yvb4KBK/
-rcRPmxdAjNJEWds6y3TYgaEJpK6MVlUsu/6Wrt4MwkoX/AkCt41BEwGFChej4fds
-QOVhsTJ5LLB0s5IGvnEEDXPLc3/D5O5fgtyi2chKteNPqTZcguRQcfm3mS2+iIV4
-bjeQPxT+sQE1lc5TTGVrA8bETDG076lIgY1OQg5fpHdgiP4cjz9pa+ONk5mAhb3P
-/H5QdDrA9P8GdAJZh5tW
-=vs8T
+iQIcBAEBCAAGBQJNi9JQAAoJEHQ6UuhrqBBQ8tAP/RlwFaRFILJVXtFhPymvNx7I
+ZYky7uE9UZ96Isrfc0YqJhGFgoD7Y9FhYKyuxrJUEXIVKT3L/5ngo8Dd6V7x1kAc
+v8fE8XpHOHLZMK4vvSmfbxGK2c4yTu0Run2cKOFMo7+FBJgYRPq/AeBJA1GCiHTl
+DkQJButKFl/bX9GHtYarkFGN1+6VcYadaPg9gx1j4xv9uDg/HzX/c3WdRbkBA2/X
+RW0J6oAh/VIOu6wdHxWRWCxnoy2SndSazjZfd3RIUcUrGJO0mx2wMn443vucAx2V
+8YTb8OOYdKiws0y9vyP4VwIu/etPmmabbuCOKEDd8Drdn7GJoBoRkJ2EeOJTyUF8
+yTFkTyEo1yP+pmaxcNGri/DIpIF5zH3q0tjyltX67bWeMu9vNEFmNv4uT9OGnI6x
+XBJV/7P0CvXKM4vvVv+zjnr2Hn7TOeatSw0sGGmqVOTZicCUV9cmKbmmQBVoQqpy
+zU+qidK+32VPqMFucGdkSghWUKQhgWtA4t7jAZxErjLoH/gcuwkYchBiaYIHrlix
+JlB/tQBVcKGwzPZYDwpBIIeoQLJYv4L/Opdxlo/xq6guRlS+PMYFZ35gZVw/opyi
+gtipRhtxSfy3ereb5sT5mWNI/8W+eBkBf1zIceUJELmp4memh4jVt39XuaZpUdZq
+eUa1eH/PwZbpsJhrJx8q
+=erDx
 -----END PGP SIGNATURE-----
