@@ -1,17 +1,17 @@
 COMPILE_OPTS =		$(INCLUDES) -I. -DSOCKLEN_T=socklen_t -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64 $(CPPFLAGS)
 C =			c
 C_COMPILER =		$(CC)
-C_FLAGS =		$(COMPILE_OPTS) $(CFLAGS)
+C_FLAGS =		$(COMPILE_OPTS) -fPIC $(CFLAGS)
 CPP =			cpp
 CPLUSPLUS_COMPILER =	$(CXX)
-CPLUSPLUS_FLAGS =	$(COMPILE_OPTS) $(CXXFLAGS)
+CPLUSPLUS_FLAGS =	$(COMPILE_OPTS) -fPIC $(CXXFLAGS)
 OBJ =			o
 LINK =			$(CXX) -o
 LINK_OPTS =		$(CXXFLAGS) $(LDFLAGS) -L.
 CONSOLE_LINK_OPTS =	$(LINK_OPTS)
 LIBRARY_LINK =		$(CXX) -o
-LIBRARY_LINK_OPTS =	$(LINK_OPTS) -r -static -nostdlib
-LIB_SUFFIX =		a
+LIBRARY_LINK_OPTS =	$(LINK_OPTS) -shared -Wl,-soname=$@.$(LIVE_ABI_VERSION),-rpath,'$(LIBDIR)'
+LIB_SUFFIX =		so
 LIBS_FOR_CONSOLE_APPLICATION =
 LIBS_FOR_GUI_APPLICATION =
 EXE =
